--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="SpaceXpedia"
-      content="This website was made with <3 using React."
+      content="This website was made with <3 by James, using React."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
